--- a/pages/blog.html
+++ b/pages/blog.html
@@ -1,9 +1,7 @@
 ---
 layout: page
-title: Home
 ---
-
-{% for post in site.categories.home %}
+{% for post in site.categories.blog %}
    <a href="{{ site.github.url }}{{post.url }}">
       <div class="featured-posts" {% if post.image.feature %}style="background-image:url({{ site.github.url }}/assets/img/{{ post.image.feature }})"{% endif %}>
          <h2><span>{{ post.title }}</span></h2>
